Fixed card row wrapping (#4)
* get rows to flex

* remove unneeded CSS

--- a/src/components/board.css
+++ b/src/components/board.css
@@ -3,14 +3,14 @@
   background-position: center center;
 }
 
-.board {
+.barrier {
+  background-color: #171008;
+  min-height: 2rem;
+}
+
+#board {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 0 5rem 0 5rem;
-}
-
-.barrier {
-  background-color: #171008;
-  min-height: 2rem;
 }
