--- a/src/components/card.css
+++ b/src/components/card.css
@@ -5,7 +5,6 @@
   min-height: 250px;
   min-width: 250px;
   max-width: 300px;
-  flex-basis: 18%;
 
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
